# ai-engineer-training

./: .gitignore  main.py  pyproject.toml
backups/: faq_data_snapshot_20260129_154105.json  faq_data_snapshot_20260129_154625.json  faq_data_snapshot_20260129_155258.json  faq_data_snapshot_20260129_155507.json  faq_data_snapshot_20260129_155638.json  faq_data_snapshot_20260129_155748.json
week03-homework/: pyproject.toml
week03-homework-2/: pyproject.toml  qa_pairs.json
week03-homework-2/graph_rag/: company_recognize.py  graph_rag_retriever.py  init_milvus_data.py  init_neo4j_data.py  main.py  milvus_manager.py  neo4j_manager.py  report.md
week03-homework-2/milvus_faq/: faq_data_init.py  faq_retriever.py  main.py  milvus_manager.py  report.md
week03-homework-2/milvus_faq/backups/: faq_data_snapshot_20260129_162048.json  faq_data_snapshot_20260129_172623.json  faq_data_snapshot_20260129_173354.json  faq_data_snapshot_20260129_173430.json
week03-homework/chunking_research/: main.py  query_results.json  query_results.md  report.md
week03-homework/ocr_research/: main.py  report.md
week04-homework/: pyproject.toml
week04-homework/smart_customer_service/: main.py  order_graph.py  order_tool.py
week05-homework/: pyproject.toml
week05-homework/multi-agent/: agent_define.py  article_graph.py  execute_log.py  graph_nodes.py  graph_state.py  main.py  report.md
week05-homework/multi-agent/mcp_servers/: __init__.py  web_search_server.py
