[project]
name = "week03-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.14.13",
    "llama-index-core>=0.14.13",
    "llama-index-vector-stores-milvus>=0.9.2",
    "llama-index-llms-openai-like>=0.5.1",
    "llama-index-embeddings-huggingface>=0.3.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "python-dotenv",
    "nest-asyncio>=1.6.0",
]
